# cfarming

./: CMakeLists.txt  PlantGrowthSystem.cpp  README.md  main.cpp
